feat: add GET /shippers endpoint
